--- a/SIR.Rmd
+++ b/SIR.Rmd
@@ -3,8 +3,13 @@ title: "Epidemic dynamics"
 subtitle: "Boxes and flows"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output:
-  tufte::tufte_handout: default
+output: tint::tintPdf
+latexfonts:
+  - package: newtxmath
+    options: 
+      - cmintegrals
+      - cmbraces
+  - package: ebgaramond-maths
 header-includes:
    - \usepackage{booktabs}
    - \usepackage{cancel}
@@ -110,7 +115,7 @@ textplain(mid=c(0.6, 0.3), lab = expression(phi*gamma*I), cex=1)
 
 It is not essential that you are able to estimate virulence and recovery rates, but you should see that shorter residence times and larger proportions imply faster rates. It can also be an interesting exercise to think about what virulence might be for different sorts of infections, like influenza, which probably won't kill you, but if it does it does so quickly, and HIV/AIDS, which was very, very likely to kill you prior to effective treatments, but took years to do so. Which has higher virulence by our definition?
 
-
+\newpage
 # Transmission
 
 
@@ -252,7 +257,18 @@ knitr::include_graphics("dimensional_analysis.png")
 
 # The dynamics of an epidemic
 
-So we have our model, but, I can almost hear you asking, what does it _do_? We're about to get there, simulating or running or solving these equations^[We won't worry about these details of how, but if you're interested, it's a version of the Runga-Kutta method. Or, like I said, don't worry about it.] so that we can see how $S$, $I$, and $R$ change through time. But first I want you to take a moment and draw on these axes what _you_ think these three quantities will look like through time. Try it. Start at time zero with a large susceptible population ($S$ is big), a single infected ($I=1$), and no resistant individuals ($R=0$). What happens to these three groups as the epidemic progresses? You would probably do well to move in small steps, starting with $S$ and then thinking about $I$ and $R$. 
+So we have our model, but, I can almost hear you asking, what does it _do_? We're about to get there, simulating or running or solving these equations^[We won't worry about these details of how, but if you're interested, it's a version of the Runga-Kutta method. Or, like I said, don't worry about it.] so that we can see how $S$, $I$, and $R$ change through time. But first I want you to take a moment and draw on these axes what _you_ think these three quantities will look like through time. Try it. Start at time zero with a large susceptible population ($S$ is big), a single infected ($I=1$), and no resistant individuals ($R=0$). What happens to these three groups as the epidemic progresses? You would probably do well to move in small steps, starting with $S$ and then thinking about $I$ and $R$. Try drawing the dynamics on these axes.
+
+
+```{r}
+tibble(time=c(0,50), N=c(0, 100)) %>% 
+  ggplot(., aes(time, N)) +
+  geom_blank() + 
+  annotate(geom="point", x=0, y=c(1,199)) + 
+  annotate(geom="text", x=0, y=c(1,199), label=c("I","S"), hjust=1.5) + 
+  labs(y="Number")
+```
+
 
 \newpage
 
@@ -371,7 +387,7 @@ Indeed, the dynamics are usually very similar from an SEIR to an SIR. The delay,
 
 This is just one example of how you can modify a compartment model to better match the biological realities of your system. We will see more later. 
 
-\newpage
+
 # Why epidemics fade: think of fire
 
 Lastly, why did the epidemic fade? That is, why did the infected category eventually decline to near zero levels? I hope you can intuitively answer that: like a fire running out of fuel, the epidemic ran out of susceptible individual to infect (around day 12 or 13) and then those individuals that were infected at that point eventually died or recovered. 
@@ -501,7 +517,7 @@ from which we get $1+`r round(coef(l)[2], 3)`/0.1 = `r round(1+coef(l)[2]/0.1, 3
 
 In actual practice, researchers _do_ use this approach to estimate $R_0$, but actually sorting out the duration of time in the infected class can be tricky and nuanced. There are many other more sophisticated approaches to estimating $R_0$, as you might expect, but it is nice to see that 1) simple can work and 2) that, once again, plotting numbers against time on a logarithmic scale tells us something about the underlying process^[I'll let you think about what the linear _decline_ in $I$ on the graph above means and what the slope might represent.].
 
-# What does it take for an epidemic _not_ to grow? Reducing $R_0$ or $R_t < 1$
+# What does it take for an epidemic _not_ to grow? Reducing $R_t < 1$
 
 You can think about most public health interventions as aimed at reducing $R_t$ or $R_0$ so that, on average, each infected individual produces less than one new infection. When this happens, the epidemic will start to fade. Of course this happens naturally when an infection has spread so much that it runs out of susceptible hosts^[[Although it can take a long time get there!](https://www.nytimes.com/interactive/2020/05/28/upshot/coronavirus-herd-immunity.html)]. Like a wildfire running out of unburned trees, the spread of the infection will slow down and eventually fade out. What's more, like the unburned trees after a fire, an epidemic will not generally infect everyone, even if left uncontrolled. This was one of the more surprising results from early epidemic models. Even highly transmissible infections will not reach everyone. 
 
@@ -510,7 +526,7 @@ This finding, and the underlying logic, that the we might reach a critical level
 * **Vaccination** essentially reduces $S$ and puts those individuals into the $R$ class. This means fewer individuals that can get sick and, if you get a high enough fraction of the population vaccinated, that first infected individual will not find enough susceptibles in the population to replace itself before it dies or recovers. This is heard immunity, but without all of the morbidity and mortality to get there^[[Yes, vaccines can have side effects, but those are much, much, much less severe than the disease.](https://gimletmedia.com/shows/science-vs/n8ho59/)]. What's more, you can protect particularly vulnerable groups, such as the very young or old or immunocompromised, by vaccinating the people around them.    
   There is a simple equation that describes the fraction of the population that must be vaccinated, which we call $q$, to ensure that $R_0 \leq 1$: $q \geq 1-\tfrac{1}{R_0}$. As you would expect, the higher $R_0$, the greater that fraction you must vaccinate. 
 * **Quarantine** and **social distancing** and **masks** are all aimed at reducing the number of potentially infectious contacts (remember $c(N)$?) or the probability of transmission given a contact ($\pi$), all of which should reduce $\beta$. From a public health point of view it does not matter whether a mask protects the wearer from infection or other people from an infected wearer, both reduce $\pi$. 
-* **Contact tracing** is especially important because it allows one to focus these efforts to reduce infectious contacts on 1) the infected people and 2) their close contacts that might have been infected. With good contact tracing^[Which requires good testing broadly applied.] one need not apply control measures blindly across a whole population. Indeed, most successful control programs, such as the recent end to the Ebola virus outbreak in northeastern Democratic Republic of the Congo^[https://www.scientificamerican.com/article/worlds-second-deadliest-ebola-outbreak-ends-in-democratic-republic-of-the-congo/], involve contact tracing in combination with quarantine and, often, targeted vaccination. 
+* **Contact tracing** is especially important because it allows one to focus these efforts to reduce infectious contacts on 1) the infected people and 2) their close contacts that might have been infected. With good contact tracing^[Which requires good testing broadly applied.] one need not apply control measures blindly across a whole population. Indeed, most successful control programs, such as the recent end to the Ebola virus outbreak in northeastern [Democratic Republic of the Congo](https://www.scientificamerican.com/article/worlds-second-deadliest-ebola-outbreak-ends-in-democratic-republic-of-the-congo/), involve contact tracing in combination with quarantine and, often, targeted vaccination. 
 * **Treatment** of infections, often with chemical therapeutics, can reduce the duration of an infection, as well as reduce morbidity and mortality. If individuals are infectious for less time^[It is important to note that some treatments and vaccines can reduce symptoms in a person or animal without reducing their ability to spread the infection. This is good for the individuals, sure, but it can exacerbate the spread of infection, making the epidemic worse. This is one of many potential conflicts between what is optimal for an individual vs for a population.], there is a shorter window for transmission, which can reduce $R_0$. 
 
-
+If you would like to try your hand at ending the COVID-19 epidemic, try this fun interactive application: https://alhill.shinyapps.io/COVID19seir/ . It includes a lot of sliders, but the essential features of the system (outside of space and stochastic dynamics) are there. 
