--- a/Transmission.Rmd
+++ b/Transmission.Rmd
@@ -3,8 +3,13 @@ title: "How should we think about transmission?"
 subtitle: "Frequency-dependence, density-dependence, and something in between"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output:
-  tufte::tufte_handout: default
+output: tint::tintPdf
+latexfonts:
+  - package: newtxmath
+    options: 
+      - cmintegrals
+      - cmbraces
+  - package: ebgaramond-maths
 header-includes:
    - \usepackage{booktabs}
    - \usepackage{cancel}
@@ -96,7 +101,8 @@ df %>%
   scale_y_continuous("Contact rate", sec.axis = sec_axis(~ .*0.05, name="Transmission rate")) + 
   scale_x_continuous("Host population size") + 
   theme(legend.position = "bottom",
-        legend.title=element_blank())
+        legend.title=element_blank()) + 
+  coord_cartesian(ylim=c(0,30))
 ```
 
 
@@ -135,7 +141,8 @@ df %>%
   scale_y_continuous("Contact rate", sec.axis = sec_axis(~ .*0.05, name="Transmission rate")) + 
   scale_x_continuous("Host population size") + 
   theme(legend.position = "bottom",
-        legend.title=element_blank())
+        legend.title=element_blank())+ 
+  coord_cartesian(ylim=c(0,30))
 ```
 
 When researchers have actually measured transmission rates across densities they have almost always found^[My own work with amphibians and ranavirus transmission included.] that the best description was something like the black line, where transmission increases with host population size, but starts to level off. There are more reasons for this than we have time to list^[Heterogeneity in susceptibility, contact networks, the reality that all transmission is local, ...], but any sort of saturating function generally works pretty well. What's more, researchers usually find that the frequency-dependent model is a pretty reasonable approximation over a wide variety of conditions and the density-dependent model just plain stinks. It's the bedrock assumption of myriad models and wildlife management policy and so on and it is just plain bad. Once again, it pays to check your assumptions. 
